--- a/package.json
+++ b/package.json
@@ -1,7 +1,22 @@
 {
+  "name": "vue-project",
+  "version": "0.0.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
+    "@lottiefiles/dotlottie-vue": "^0.8.1",
     "bootstrap": "^5.2.3",
     "notyf": "^3.10.0",
-    "vue": "^3.5.18"
+    "vue": "^3.5.17"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^6.0.0",
+    "vite": "^7.0.0",
+    "vite-plugin-vue-devtools": "^7.7.7"
   }
 }
